--- a/lecures-support/04-basic-targets/CMakeLists.txt
+++ b/lecures-support/04-basic-targets/CMakeLists.txt
@@ -1,5 +1,8 @@
 cmake_minimum_required(VERSION 3.22)
 project(BasicTargets)
 
-add_library(MyApplication STATIC ExampleClass.cpp)
+add_library(MyLibrary STATIC ExampleClass.cpp)
+
 add_executable(MyApplication main.cpp)
+
+target_link_libraries(MyApplication MyLibrary)
