--- a/lecures-support/05-project-structure/src/data-parsers/json-parser/test/CMakeLists.txt
+++ b/lecures-support/05-project-structure/src/data-parsers/json-parser/test/CMakeLists.txt
@@ -7,4 +7,4 @@ aux_source_directory(. TEST_FILES)
 add_executable(${TEST_NAME} ${TEST_FILES})
 
 target_link_libraries(${TEST_NAME} PRIVATE gmock gmock_main)
-target_link_libraries(${TEST_NAME} PRIVATE JsonCameraDataParser)
+target_link_libraries(${TEST_NAME} PRIVATE App::JsonCameraDataParser)
