--- a/lecures-support/05-project-structure/src/application/CMakeLists.txt
+++ b/lecures-support/05-project-structure/src/application/CMakeLists.txt
@@ -6,5 +6,5 @@ aux_source_directory(. SRC_FILES)
 
 add_executable(${APP_NAME} ${SRC_FILES})
 
-target_link_libraries(${APP_NAME} PRIVATE JsonCameraDataParser)
-target_link_libraries(${APP_NAME} PRIVATE FileOperations)
+target_link_libraries(${APP_NAME} PRIVATE App::JsonCameraDataParser)
+target_link_libraries(${APP_NAME} PRIVATE App::FileOperations)
