--- a/lecures-support/05-project-structure/src/data-parsers/json-parser/CMakeLists.txt
+++ b/lecures-support/05-project-structure/src/data-parsers/json-parser/CMakeLists.txt
@@ -5,8 +5,9 @@ project(${LIB_NAME})
 aux_source_directory(. SRC_FILES)
 
 add_library(${LIB_NAME} STATIC ${SRC_FILES})
+add_library(App::${LIB_NAME} ALIAS ${LIB_NAME})
 
-target_link_libraries(${LIB_NAME} PUBLIC CameraDataParserInterface)
+target_link_libraries(${LIB_NAME} PUBLIC App::CameraDataParserInterface)
 target_link_libraries(${LIB_NAME} PRIVATE nlohmann_json::nlohmann_json)
 
 target_include_directories(${LIB_NAME} INTERFACE .)
