--- a/lecures-support/05-project-structure/src/data-parsers/parser-interface/CMakeLists.txt
+++ b/lecures-support/05-project-structure/src/data-parsers/parser-interface/CMakeLists.txt
@@ -3,5 +3,6 @@ set(LIB_NAME CameraDataParserInterface)
 project(${LIB_NAME})
 
 add_library(${LIB_NAME} INTERFACE)
+add_library(App::${LIB_NAME} ALIAS ${LIB_NAME})
 
 target_include_directories(${LIB_NAME} INTERFACE .)
