--- a/lecures-support/05-project-structure/src/file-loaders/CMakeLists.txt
+++ b/lecures-support/05-project-structure/src/file-loaders/CMakeLists.txt
@@ -5,6 +5,7 @@ project(${LIB_NAME})
 aux_source_directory(. SRC_FILES)
 
 add_library(${LIB_NAME} STATIC ${SRC_FILES})
+add_library(App::${LIB_NAME} ALIAS ${LIB_NAME})
 
 target_include_directories(${LIB_NAME} INTERFACE .)
 
