--- a/lecures-support/13-loops/CMakeLists.txt
+++ b/lecures-support/13-loops/CMakeLists.txt
@@ -4,6 +4,12 @@ project(Loops)
 list(APPEND ENGLISH one two three four five)
 list(APPEND POLISH jeden dwa trzy cztery)
 
+foreach(WORD IN LISTS ENGLISH POLISH)
+    message(STATUS "Word: ${WORD}")
+endforeach()
+
+message("============================================")
+
 foreach(WORD IN ZIP_LISTS ENGLISH POLISH)
     message(STATUS "EN=${WORD_0}, PL=${WORD_1}")
 endforeach()
