--- a/lecures-support/19-plugin/src/application/CMakeLists.txt
+++ b/lecures-support/19-plugin/src/application/CMakeLists.txt
@@ -9,7 +9,6 @@ target_link_libraries(${APP_NAME} PRIVATE SevenIDE::PluginLoaderFactory)
 include(TargetPluginDependency)
 
 target_plugin_dependency(${APP_NAME}
-        PLUGINS
-        SevenIDE::Objects2DPlugin
+        PLUGINS SevenIDE::Objects2DPlugin
                 SevenIDE::OpenGlGraphics
         DEPLOY_PATH plugins)
