--- a/lecures-support/65-clang-tidy/CMakeLists.txt
+++ b/lecures-support/65-clang-tidy/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required(VERSION 3.22)
 project(ClangTidyExample LANGUAGES CXX)
 
-list(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
+list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
+
+include(UseClangTidy)
 
 add_subdirectory(src)
