--- a/lecures-support/66-ccache/CMakeLists.txt
+++ b/lecures-support/66-ccache/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required(VERSION 3.22)
 project(CCache LANGUAGES CXX)
 
-list(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
+list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
+
+include(UseCCache)
 
 add_subdirectory(src)
