Adjust examples to machine

--- a/lecures-support/19-plugin/src/plugin-system/linux-plugin-system/CMakeLists.txt
+++ b/lecures-support/19-plugin/src/plugin-system/linux-plugin-system/CMakeLists.txt
@@ -8,3 +8,4 @@ target_include_directories(${LIB_NAME} INTERFACE .)
 add_library(SevenIDE::${LIB_NAME} ALIAS ${LIB_NAME})
 
 target_link_libraries(${LIB_NAME} PUBLIC SevenIDE::PluginSystemInterface)
+target_link_libraries(${LIB_NAME} PRIVATE dl)
