--- a/tasks/02-project-structure/src/CMakeLists.txt
+++ b/tasks/02-project-structure/src/CMakeLists.txt
@@ -1,12 +1,5 @@
-set(APP_NAME Application)
-set(TEST_NAME Tests)
+add_subdirectory(file-loader)
+add_subdirectory(parser)
+add_subdirectory(server)
 
-project(${APP_NAME})
-
-aux_source_directory(. SRC_FILES)
-add_executable(${APP_NAME} ${SRC_FILES})
-target_link_libraries(${APP_NAME} PRIVATE nlohmann_json::nlohmann_json)
-
-aux_source_directory(test TEST_FILES)
-add_executable(${TEST_NAME} ${TEST_FILES} ${SRC_FILES})
-target_link_libraries(${TEST_NAME} PRIVATE gmock gmock_main)
+add_subdirectory(app)
