--- a/tasks/02-project-structure/src/parser/json-parser/CMakeLists.txt
+++ b/tasks/02-project-structure/src/parser/json-parser/CMakeLists.txt
@@ -10,4 +10,4 @@ target_link_libraries(${LIB_NAME} PRIVATE nlohmann_json nlohmann_json)
 
 target_include_directories(${LIB_NAME} INTERFACE .)
 
-add_subdirectory(test)
+#add_subdirectory(test)
