--- a/lecures-support/03-variables/CMakeLists.txt
+++ b/lecures-support/03-variables/CMakeLists.txt
@@ -2,8 +2,14 @@ cmake_minimum_required(VERSION 3.22)
 
 project(variables)
 
-set(LIST_VARIABLE A B C)
+#set(LIST_VARIABLE A B C)
 
-list(APPEND LIST_VARIABLE D)
+#list(APPEND LIST_VARIABLE D)
 
 message("LIST_VARIABLE value: ${LIST_VARIABLE}")
+
+if (DEFINED LIST_VARIABLE)
+    message("Is defined")
+else()
+    message("Is not defined")
+endif()
