--- a/tasks/03-cache-variables/CMakeLists.txt
+++ b/tasks/03-cache-variables/CMakeLists.txt
@@ -4,5 +4,7 @@ project(StructuredProjectExample LANGUAGES CXX VERSION 1.0.0)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED TRUE)
 
+option(MY_BUILD_TEST "Build tests" "ON")
+
 add_subdirectory(external EXCLUDE_FROM_ALL)
 add_subdirectory(src)
