--- a/tasks/03-cache-variables/src/file-loader/CMakeLists.txt
+++ b/tasks/03-cache-variables/src/file-loader/CMakeLists.txt
@@ -2,7 +2,15 @@ set(LIB_NAME file-loader)
 
 project(${LIB_NAME})
 
+option(MY_FILE_LOADER_AS_SHARED "OFF" "Build file-loader library as a shared library instead of a static")
+
 set(SOURCES FileWriter.cpp FileLoader.cpp)
-add_library(${LIB_NAME} STATIC ${SOURCES})
+
+if(MY_FILE_LOADER_AS_SHARED)
+    add_library(${LIB_NAME} SHARED ${SOURCES})
+else()
+    add_library(${LIB_NAME} STATIC ${SOURCES})
+endif()
+
 target_include_directories(${LIB_NAME} INTERFACE .)
 
