--- a/tasks/03-cache-variables/src/parser/json-parser/CMakeLists.txt
+++ b/tasks/03-cache-variables/src/parser/json-parser/CMakeLists.txt
@@ -10,4 +10,6 @@ target_link_libraries(${LIB_NAME} PRIVATE nlohmann_json nlohmann_json)
 
 target_include_directories(${LIB_NAME} INTERFACE .)
 
-#add_subdirectory(test)
+if(MY_BUILD_TEST)
+    add_subdirectory(test)
+endif()
